# C-Robotics

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: KalmanFilter.h
src/: kalmanFilter.cpp
